Changes by Jacob Barkdull 2015-02-27
--------------------------------------------------------------------------------
* Added: Setting to disable separate counts for replies and primary comments.
* Fixed: "Showing" being displayed in count link.
* Fixed: Disabled avatar icon styling.
* Removed "_pop" from popular comments' permalink where its shown.
* Changed: "cmtcount" to "hashover-cmtcount"


Changes by Jacob Barkdull 2015-02-26
--------------------------------------------------------------------------------
* Make root directory an absolute path again.
* Check if HTTPS server superglobal is non-empty not just set for cookies.
* Fetch avatars through HTTPS if set.


Changes by Jacob Barkdull 2015-02-19
--------------------------------------------------------------------------------
* NOTICE:

	Do not preserve your "settings.php" file.

	You will need the new version to take advantage of the new and changed 
	features listed below. Not using the new version will cause potentially 
	harmful behavior, errors, and PHP error/warning messages that will 
	in-turn cause JavaScript syntax errors.

	It is completely safe to simply move the values from your old 
	"settings.php" file into the new version. We no longer store settings 
	in an array, so all that is needed is for the new variables to exist.


* Structure of data storage has changed

	The structure of how comments are stored has changed a bit. Notably the 
	"passwd" field is stored as proper "password" now. Unfortunately this 
	means all old comments willn't be editable unless converted to the new 
	structure. For which I have a script for anyone interested.

	Please note that the data format storage structure will most definitely 
	change more, and do so a few more times in the future. However, the 
	changes should be minimal from version 2.0 onward, and in the event 
	that there are big changes, 2.x releases will have backward 
	compatibility. As will 2.0 to 1.0.

