@@ -3,7 +3,7 @@
 	<div class="hashover-header">' + name + ' ' + thread + '</div>
 	<div id="hashover-content-' + permalink + '" class="hashover-content">' + comment + '</div>
 
-	<form name="hashover_edit_form-' + permalink + '" id="hashover-edit-forms-' + permalink + '" method="post" action="' + action + '">
+	<form name="hashover_edit_form-' + permalink + '" id="hashover-edit-' + permalink + '" method="post" action="' + action + '">
 		' + edit_form + '
 	</form>
 
@@ -13,6 +13,6 @@
 	</div>
 </div>
 
-<form name="hashover_edit_form-' + permalink + '" id="hashover-reply-forms-' + permalink + '" method="post" action="' + action + '">
+<form name="hashover_edit_form-' + permalink + '" id="hashover-reply-' + permalink + '" method="post" action="' + action + '">
 	' + reply_form + '
 </form>
