@@ -26,7 +26,8 @@ Copyright (C) 2014 Jacob Barkdull
 	position: relative;
 }
 
-#hashover #hashover-requiredFields {
+#hashover #hashover-requiredFields,
+#hashover .hashover-comment.hashover-collapsed {
 	display: none;
 }
 
@@ -383,10 +384,6 @@ Copyright (C) 2014 Jacob Barkdull
 
 #hashover .hashover-comment > .hashover-comment {
 	margin-top: 16px;
-}
-
-#hashover .hashover-comment.hashover-collapsed {
-	display: none;
 }
 
 #hashover .hashover-comment.hashover-reply {
