@@ -23,11 +23,11 @@
 		</span>
 	</div>
 
-	<form name="hashover_edit_form-' + permalink + '" id="hashover-edit-forms-' + permalink + '" method="post" action="' + action + '">
+	<form name="hashover_edit_form-' + permalink + '" id="hashover-edit-' + permalink + '" method="post" action="' + action + '">
 		' + edit_form + '
 	</form>
 </div>
 
-<form name="hashover_reply_form-' + permalink + '" id="hashover-reply-forms-' + permalink + '" method="post" action="' + action + '"' + hashover_reply_form_style + '>
+<form name="hashover_reply_form-' + permalink + '" id="hashover-reply-' + permalink + '" method="post" action="' + action + '"' + hashover_reply_form_style + '>
 	' + reply_form + '
 </form>
