@@ -2,10 +2,10 @@
 <div class="hashover-balloon">
 	<div class="hashover-header">' + name + '<span class="hashover-date">' + date + '</span><span id="hashover-likes-' + permalink + '" class="hashover-likes">' + likes + '</span></div>
 	<div id="hashover-content-' + permalink + '" class="hashover-content">' + comment + '</div>
-	<form name="hashover_edit_form-' + permalink + '" id="hashover-reply-forms-' + permalink + '" method="post" action="' + action + '">
+	<form name="hashover_edit_form-' + permalink + '" id="hashover-reply-' + permalink + '" method="post" action="' + action + '">
 		' + reply_form + '
 	</form>
-	<form name="hashover_edit_form-' + permalink + '" id="hashover-edit-forms-' + permalink + '" method="post" action="' + action + '">
+	<form name="hashover_edit_form-' + permalink + '" id="hashover-edit-' + permalink + '" method="post" action="' + action + '">
 		' + edit_form + '
 	</form>
 
